--- a/docs/styles/CustomStyles/WordList.yml
+++ b/docs/styles/CustomStyles/WordList.yml
@@ -30,7 +30,7 @@ swap:
     Android device: Android-powered device
     android: Android
     API explorer: APIs Explorer
-    application: app
+    app: application
     approx\.: approximately
     authN: authentication
     authZ: authorization
