update vale exlcusion

--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -20,3 +20,15 @@ Google.Exclamation = NO
 
 [formats]
 mdx = md
+
+Exclude = rest-api/**
+Exlcude = assets/** 
+Exclude = images/**
+Exclude = logos/** 
+Exclude = styles/** 
+Exclude = *.json 
+Exclude = *.js 
+Exclude = *.css
+Exclude = *.jpg
+Exclude = *.png
+Exclude = 3.0rc/**
