--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -13,22 +13,15 @@ Vocab = prose
 
 Vale.Spelling = NO
 Google.Will = NO
-Google.We = NO
 Google.Quotes = NO
 Google.OptionalPlurals = NO
+
+# All of the following would be helpful in some cases but get really noisy
 Google.Exclamation = NO
+Google.Headings = NO
+Google.We = NO
 
 [formats]
 mdx = md
 
-Exclude = rest-api/**
-Exlcude = assets/** 
-Exclude = images/**
-Exclude = logos/** 
-Exclude = styles/** 
-Exclude = *.json 
-Exclude = *.js 
-Exclude = *.css
-Exclude = *.jpg
-Exclude = *.png
-Exclude = 3.0rc/**
+# vale --glob='!{*.mdx,*.js,*.json,*.png,*.jpg,*.css,*.yml,*.svg,3.0rc/api-ref/*.md}' ./3.0rc
