--- a/.github/workflows/surface-high-engagement-issues.yml
+++ b/.github/workflows/surface-high-engagement-issues.yml
@@ -10,6 +10,8 @@ on:
           required: true
           default: '1'
 
+permissions: read-all
+
 jobs:
   surface-high-engagement-issues:
     runs-on: ubuntu-latest
