--- a/.github/workflows/surface-high-engagement-issues.yml
+++ b/.github/workflows/surface-high-engagement-issues.yml
@@ -13,7 +13,7 @@ on:
 permissions:
   contents: write
   issues: write
-  pull-requests: read
+  repository-projects: write
 
 jobs:
   surface-high-engagement-issues:
