--- a/docs/styles/CustomStyles/WordList.yml
+++ b/docs/styles/CustomStyles/WordList.yml
@@ -69,7 +69,7 @@ swap:
     regex: regular expression
     SHA1: SHA-1|HAS-SHA1
     sign into: sign in to
-    sign-?on: single sign-on
+    # sign-?on: single sign-on
     static IP address: static external IP address
     stylesheet: style sheet
     synch: sync
