pick d7e9f93df4 Adds check to ensure only know view paths can be passed Rename step

--- a/.github/workflows/label-check.yml
+++ b/.github/workflows/label-check.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           pip install yq
 
-      - name: Check for specific labels
+      - name: Ensure a required label is present
         id: check-label
         run: |
           found=false
