update vale rule

--- a/docs/styles/CustomStyles/WordList.yml
+++ b/docs/styles/CustomStyles/WordList.yml
@@ -83,3 +83,4 @@ swap:
     infra: infrastructure
     Prefect cloud: Prefect Cloud
     prefect cloud: Prefect Cloud
+    Prefect Server: Prefect server
