--- a/docs/styles/CustomStyles/WordList.yml
+++ b/docs/styles/CustomStyles/WordList.yml
@@ -81,3 +81,6 @@ swap:
     World Wide Web: web
     # Prefect additions
     infra: infrastructure
+    Prefect cloud: Prefect Cloud
+    prefect cloud: Prefect Cloud
+    Prefect Server: Prefect server
