get the tests passing

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ filterwarnings =
     ignore::ResourceWarning
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::pluggy.PluggyTeardownRaisedWarning
+    ignore:Artifact creation outside of a flow or task run is deprecated and will be removed in a later version.:FutureWarning
 
 
 [mypy]
