down to 17 warnings

--- a/docs/styles/CustomStyles/WordList.yml
+++ b/docs/styles/CustomStyles/WordList.yml
@@ -22,7 +22,7 @@ swap:
     "tap (?:&|and) hold": touch & hold
     "un(?:check|select)": clear
     # above: preceding
-    account name: username
+    # account name: username
     action bar: app bar
     admin: administrator
     Ajax: AJAX
@@ -30,7 +30,7 @@ swap:
     Android device: Android-powered device
     android: Android
     API explorer: APIs Explorer
-    app: application
+    # application: app
     approx\.: approximately
     authN: authentication
     authZ: authorization
@@ -82,5 +82,4 @@ swap:
     # Prefect additions
     infra: infrastructure
     Prefect cloud: Prefect Cloud
-    prefect cloud: Prefect Cloud
     Prefect Server: Prefect server
