--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -25,9 +25,13 @@ Google.We = NO
 mdx = md
 
 # Tell vale to ignore MDX's JSX functionality
-IgnoredScopes = code, tt, img, url, a
-SkippedScopes = script, style, pre, figure, code
-# Ignore code surrounded by backticks or plus sign, parameters defaults, URLs, and angle brackets.
-TokenIgnores = (<\/?[A-Z].+>), (\x60[^\n\x60]+\x60), ([^\n]+=[^\n]*), (\+[^\n]+\+), (http[^\n]+\[)
+# None of the following seems to matter 
+# Maybe related to https://github.com/errata-ai/vale/issues/858
 
+# IgnoredScopes = code, tt, img, url, a
+# SkippedScopes = script, style, pre, figure, code
+# Ignore code surrounded by backticks or plus sign, parameters defaults, URLs, and angle brackets.
+# TokenIgnores = (<\/?[A-Z].+>), (\x60[^\n\x60]+\x60), ([^\n]+=[^\n]*), (\+[^\n]+\+), (http[^\n]+\[), (http[^\n]+\[)
+
+# To execute
 # vale --glob='!{*.mdx,*.js,*.json,*.png,*.jpg,*.css,*.yml,*.svg,3.0rc/api-ref/*.md}' ./3.0rc
