--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -24,14 +24,14 @@ Google.We = NO
 [formats]
 mdx = md
 
-# Tell vale to ignore MDX's JSX functionality
-# None of the following seems to matter 
-# Maybe related to https://github.com/errata-ai/vale/issues/858
+# Tell vale to ignore MDX's JSX-specific syntax
+# None of the following seems to matter, appears to be a bug with mdx and vale
+# See https://github.com/errata-ai/vale/issues/858
 
 # IgnoredScopes = code, tt, img, url, a
 # SkippedScopes = script, style, pre, figure, code
 # Ignore code surrounded by backticks or plus sign, parameters defaults, URLs, and angle brackets.
 # TokenIgnores = (<\/?[A-Z].+>), (\x60[^\n\x60]+\x60), ([^\n]+=[^\n]*), (\+[^\n]+\+), (http[^\n]+\[), (http[^\n]+\[)
 
-# To execute
+# To execute vale on the command line, use the following command:
 # vale --glob='!{*.mdx,*.js,*.json,*.png,*.jpg,*.css,*.yml,*.svg,3.0rc/api-ref/*.md}' ./3.0rc
