--- a/docs/.vale.ini
+++ b/docs/.vale.ini
@@ -31,7 +31,7 @@ mdx = md
 # IgnoredScopes = code, tt, img, url, a
 # SkippedScopes = script, style, pre, figure, code
 # Ignore code surrounded by backticks or plus sign, parameters defaults, URLs, and angle brackets.
-# TokenIgnores = (<\/?[A-Z].+>), (\x60[^\n\x60]+\x60), ([^\n]+=[^\n]*), (\+[^\n]+\+), (http[^\n]+\[), (http[^\n]+\[)
+# TokenIgnores = (<\/?[A-Z].+>), (\x60[^\n\x60]+\x60), ([^\n]+=[^\n]*), (\+[^\n]+\+), (http[^\n]+\[)
 
 # To execute vale on the command line, use the following command:
 # vale --glob='!{*.mdx,*.js,*.json,*.png,*.jpg,*.css,*.yml,*.svg,3.0rc/api-ref/*.md}' ./3.0rc
