Run all benches through codspeed

--- a/.github/workflows/codspeed-benchmarks.yaml
+++ b/.github/workflows/codspeed-benchmarks.yaml
@@ -77,4 +77,4 @@ jobs:
         env:
           PREFECT_API_URL: "http://127.0.0.1:4200/api"
         with:
-          run: pytest benches/bench_cli.py benches/bench_import.py benches/bench_tasks.py --codspeed -n 6
+          run: pytest benches/ --codspeed -n 6
