--- a/docs/styles/CustomStyles/WordList.yml
+++ b/docs/styles/CustomStyles/WordList.yml
@@ -43,7 +43,7 @@ swap:
     # click on: click|click in
     #  Cloud: Google Cloud Platform|GCP
     Container Engine: Kubernetes Engine
-    content type: media type
+    # content type: media type
     curated roles: predefined roles
     data are: data is
     Developers Console: Google API Console|API Console
