Add subset of flow benchmarks

--- a/.github/workflows/codspeed-benchmarks.yaml
+++ b/.github/workflows/codspeed-benchmarks.yaml
@@ -77,7 +77,14 @@ jobs:
           PREFECT_API_URL: "http://127.0.0.1:4200/api"
         with:
           run: >
-            pytest benches
+            pytest 
+            benches/bench_cli.py 
+            benches/bench_import.py 
+            benches/bench_tasks.py 
+            benches/bench_flows.py::bench_flow_decorator
+            benches/bench_flows.py::bench_flow_call 
+            benches/bench_flows.py::bench_flow_with_called_tasks
+            --codspeed
             --numprocesses auto
             --maxprocesses 8
             --dist worksteal
