--- a/.github/workflows/codspeed-benchmarks.yaml
+++ b/.github/workflows/codspeed-benchmarks.yaml
@@ -80,6 +80,7 @@ jobs:
             pytest 
             benches/bench_cli.py 
             benches/bench_import.py 
+            benches/bench_tasks.py 
             --codspeed
             --numprocesses auto
             --maxprocesses 6
