Final changes to initial suite to run with CodSpeed

--- a/.github/workflows/codspeed-benchmarks.yaml
+++ b/.github/workflows/codspeed-benchmarks.yaml
@@ -78,9 +78,10 @@ jobs:
         with:
           run: >
             pytest 
-            benches/bench_cli.py 
             benches/bench_import.py 
             benches/bench_tasks.py 
+            benches/bench_flows.py::bench_flow_decorator
+            benches/bench_flows.py::bench_flow_call
             --codspeed
             --numprocesses auto
             --dist worksteal
