Ignore pytest-asyncio deprecation warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,6 +73,10 @@ filterwarnings =
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::pluggy.PluggyTeardownRaisedWarning
 
+    # We are intentionally redefining the pytest-asyncio's event loop, but that is now deprecated
+    # behavior.  https://github.com/PrefectHQ/prefect/issues/14559
+    ignore:The event_loop fixture provided by pytest-asyncio has been redefined:DeprecationWarning:pytest_asyncio
+
 
 [mypy]
 plugins=
