Run benchmark tests on changes to `benches/`

--- a/.github/workflows/codspeed-benchmarks.yaml
+++ b/.github/workflows/codspeed-benchmarks.yaml
@@ -9,6 +9,7 @@ on:
       - .github/workflows/benchmarks.yaml
       - .github/workflows/python-tests.yaml
       - "src/prefect/**/*.py"
+      - benches/
       - requirements.txt
       - requirements-dev.txt
       - setup.cfg
