Try adding back the other benchmarks

--- a/.github/workflows/codspeed-benchmarks.yaml
+++ b/.github/workflows/codspeed-benchmarks.yaml
@@ -78,7 +78,9 @@ jobs:
         with:
           run: >
             pytest 
+            benches/bench_tasks.py 
+            benches/bench_flows.py::bench_flow_decorator
+            benches/bench_flows.py::bench_flow_call
             benches/bench_import.py 
             --codspeed
-            --timeout=180
             -vv
