--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,6 +27,8 @@ repos:
           (?x)^(
             src/prefect/server/models/agents\.py|
             src/prefect/server/models/artifacts\.py|
+            src/prefect/server/models/concurrency_limits_v2\.py|
+            src/prefect/server/models/concurrency_limits\.py|
             src/prefect/server/models/flows\.py|
             src/prefect/concurrency/.*|
             src/prefect/events/.*|
