--- a/.github/workflows/prefect-client.yaml
+++ b/.github/workflows/prefect-client.yaml
@@ -22,12 +22,12 @@ on:
   workflow_call:
     inputs:
       upload-artifacts:
-        description: 'Whether or not to upload artifacts created in this workflow'
+        description: "Whether or not to upload artifacts created in this workflow"
         default: false
         type: boolean
       artifact-name:
-        description: 'The name for the build prefect-client artifact'
-        default: 'prefect-client-pypi-dists'
+        description: "The name for the build prefect-client artifact"
+        default: "prefect-client-pypi-dists"
         type: string
 
 jobs:
@@ -44,9 +44,9 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
-          cache: 'pip'
-          cache-dependency-path: 'requirements-client.txt'
+          python-version: "3.9"
+          cache: "pip"
+          cache-dependency-path: "requirements-client.txt"
 
       - name: Create a temp dir to stage our build
         run: echo "TMPDIR=$(mktemp -d)" >> $GITHUB_ENV
@@ -69,7 +69,7 @@ jobs:
         working-directory: ${{ env.TMPDIR }}
         env:
           PREFECT_API_KEY: ${{ secrets.PREFECT_CLIENT_SA_API_KEY }}
-          PREFECT_API_URL: 'https://api.prefect.cloud/api/accounts/9b649228-0419-40e1-9e0d-44954b5c0ab6/workspaces/96bd3cf8-85c9-4545-9713-b4e3c3e03466' # sandbox, prefect-client workspace
+          PREFECT_API_URL: "https://api.prefect.cloud/api/accounts/9b649228-0419-40e1-9e0d-44954b5c0ab6/workspaces/96bd3cf8-85c9-4545-9713-b4e3c3e03466" # sandbox, prefect-client workspace
 
       - name: Install prefect from source
         run: pip install .
@@ -82,11 +82,11 @@ jobs:
         working-directory: ${{ env.TMPDIR }}
         env:
           PREFECT_API_KEY: ${{ secrets.PREFECT_CLIENT_SA_API_KEY }}
-          PREFECT_API_URL: 'https://api.prefect.cloud/api/accounts/9b649228-0419-40e1-9e0d-44954b5c0ab6/workspaces/96bd3cf8-85c9-4545-9713-b4e3c3e03466' # sandbox, prefect-client workspace
+          PREFECT_API_URL: "https://api.prefect.cloud/api/accounts/9b649228-0419-40e1-9e0d-44954b5c0ab6/workspaces/96bd3cf8-85c9-4545-9713-b4e3c3e03466" # sandbox, prefect-client workspace
 
       - name: Publish build artifacts
         if: ${{ inputs.upload-artifacts }}
         uses: actions/upload-artifact@v4
         with:
           name: ${{ inputs.artifact-name }}
-          path: '${{ env.TMPDIR }}/dist'
+          path: "${{ env.TMPDIR }}/dist"
