--- a/setup.cfg
+++ b/setup.cfg
@@ -80,6 +80,8 @@ filterwarnings =
     ignore::ResourceWarning
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::pluggy.PluggyTeardownRaisedWarning
+    # Raised by ddtrace
+    ignore:The `get_logger` function is deprecated.*:DeprecationWarning
 
 [mypy]
 plugins=
