Updates job naming

--- a/.github/workflows/python-tests.yaml
+++ b/.github/workflows/python-tests.yaml
@@ -49,12 +49,14 @@ jobs:
   run-tests:
     runs-on:
       group: oss-larger-runners
-    name: python:${{ matrix.python-version }}, ${{ matrix.database }}
+    name: ${{ matrix.test-type }} - python:${{ matrix.python-version }}, ${{ matrix.database }}
     strategy:
       matrix:
-        modules:
-          - tests/server/ tests/events/server
-          - tests/ --ignore tests/server/ tests/events/server
+        test-type:
+          - name: Server Tests
+            modules: tests/server/ tests/events/server
+          - name: Client Tests
+            modules: tests/ --ignore tests/server/ tests/events/server
         database:
           - "postgres:14"
           - "sqlite"
@@ -65,7 +67,9 @@ jobs:
           - "3.12"
         exclude:
           - database: "sqlite"
-            modules: tests/ --ignore tests/server/ tests/events/server
+            test-type: 
+              name: Client Tests
+              modules: tests/ --ignore tests/server/ tests/events/server
 
       fail-fast: true
 
@@ -144,7 +148,7 @@ jobs:
         env:
           PREFECT_EXPERIMENTAL_ENABLE_PYDANTIC_V2_INTERNALS: "1"
         run: >
-          pytest ${{matrix.modules}}
+          pytest ${{ matrix.test-type.modules }}
           --numprocesses auto
           --maxprocesses 6
           --dist worksteal
