use config file instead

--- a/setup.cfg
+++ b/setup.cfg
@@ -80,6 +80,7 @@ filterwarnings =
     ignore::ResourceWarning
     ignore::pytest.PytestUnraisableExceptionWarning
     ignore::pluggy.PluggyTeardownRaisedWarning
+    ignore::prefect._internal.compatibility.deprecated.PrefectDeprecationWarning
 
 [mypy]
 plugins=
