--- a/src/prefect/profiles.toml
+++ b/src/prefect/profiles.toml
@@ -19,4 +19,4 @@ PREFECT_RESULTS_PERSIST_BY_DEFAULT = false
 # This is a placeholder for Prefect Cloud configuration
 # Run "prefect cloud login" to set up your Prefect Cloud profile
 # PREFECT_API_URL = "https://api.prefect.cloud/api/accounts/[ACCOUNT-ID]/workspaces/[WORKSPACE-ID]"
-# PREFECT_API_KEY = "your-api-key-here"
+# PREFECT_API_KEY = "pnu_rest-of-your-api-key-here"
