--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ pytz >= 2021.1, < 2025
 readchar >= 4.0.0, < 5.0.0
 sqlalchemy[asyncio] >= 1.4.22, != 1.4.33, < 3.0.0
 typer >= 0.12.0, != 0.12.2, < 0.13.0
+exceptiongroup >= 1.2.1
