--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -113,18 +113,24 @@ jobs:
           - prefect-version: "2.13"
             server-incompatible: true
             server-disable-csrf: true
+            extra_docker_run_options: '--env EXTRA_PIP_PACKAGES="prefect-kubernetes<0.4"'
           - prefect-version: "2.14"
             server-incompatible: true
             server-disable-csrf: true
+            extra_docker_run_options: '--env EXTRA_PIP_PACKAGES="prefect-kubernetes<0.4"'
           - prefect-version: "2.15"
             server-incompatible: true
             server-disable-csrf: true
+            extra_docker_run_options: '--env EXTRA_PIP_PACKAGES="prefect-kubernetes<0.4"'
           - prefect-version: "2.16"
             server-incompatible: false
+            extra_docker_run_options: '--env EXTRA_PIP_PACKAGES="prefect-kubernetes<0.4"'
           - prefect-version: "2.17"
             server-incompatible: false
+            extra_docker_run_options: '--env EXTRA_PIP_PACKAGES="prefect-kubernetes<0.4"'
           - prefect-version: "2.18"
             server-incompatible: false
+            extra_docker_run_options: '--env EXTRA_PIP_PACKAGES="prefect-kubernetes<0.4"'
 
     steps:
       - uses: actions/checkout@v4
