Use real in-memory SQLite

--- a/src/prefect/profiles.toml
+++ b/src/prefect/profiles.toml
@@ -12,6 +12,6 @@ PREFECT_API_URL = "http://127.0.0.1:4200/api"
 
 [profiles.test]
 PREFECT_SERVER_ALLOW_EPHEMERAL_MODE = "true"
-PREFECT_API_DATABASE_CONNECTION_URL = "sqlite+aiosqlite:///"
+PREFECT_API_DATABASE_CONNECTION_URL = "sqlite+aiosqlite:///:memory:"
 
 [profiles.cloud]
