--- a/src/integrations/prefect-docker/pyproject.toml
+++ b/src/integrations/prefect-docker/pyproject.toml
@@ -29,6 +29,7 @@ dynamic = ["version"]
 [project.optional-dependencies]
 dev = [
   "coverage",
+  "exceptiongroup",
   "interrogate",
   "mkdocs-gen-files",
   "mkdocs-material",
