--- a/src/integrations/prefect-kubernetes/pyproject.toml
+++ b/src/integrations/prefect-kubernetes/pyproject.toml
@@ -4,6 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 dependencies = [
+    "exceptiongroup",
     "prefect>=2.13.5, < 3.0.0",
     "kubernetes-asyncio>=29.0.0",
     "tenacity>=8.2.3",
