--- a/src/integrations/prefect-gcp/pyproject.toml
+++ b/src/integrations/prefect-gcp/pyproject.toml
@@ -24,6 +24,7 @@ classifiers = [
   "Topic :: Software Development :: Libraries",
 ]
 dependencies = [
+  "anyio >= 4.0.0",
   "exceptiongroup",
   "prefect>=2.16.4, < 3.0.0",
   "google-api-python-client>=2.20.0",
