--- a/src/integrations/prefect-docker/pyproject.toml
+++ b/src/integrations/prefect-docker/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Topic :: Software Development :: Libraries",
 ]
-dependencies = ["prefect>=2.13.5, < 3.0.0", "docker>=6.1.1", "anyio >= 4.0.0"]
+dependencies = ["prefect>=2.19.9, < 3.0.0", "docker>=6.1.1"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
