fix prefect-kubernetes prefect bound

--- a/src/integrations/prefect-kubernetes/pyproject.toml
+++ b/src/integrations/prefect-kubernetes/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 dependencies = [
     "exceptiongroup",
-    "prefect>2.19.9, < 3.0.0",
+    "prefect>=2.19.9, < 3.0.0",
     "kubernetes-asyncio>=29.0.0",
     "tenacity>=8.2.3",
     "pyopenssl>=24.1.0",
