--- a/.github/workflows/integration-pacakge-tests.yaml
+++ b/.github/workflows/integration-pacakge-tests.yaml
@@ -72,6 +72,7 @@ jobs:
       - name: Install dependencies
         working-directory: src/integrations/${{ matrix.package }}
         run: |
+          python -m pip install setuptools
           python -m pip install -U uv
           uv pip install --upgrade --system -e .[dev]
 
