--- a/src/integrations/prefect-aws/pyproject.toml
+++ b/src/integrations/prefect-aws/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
   "botocore>=1.27.53",
   "mypy_boto3_s3>=1.24.94",
   "mypy_boto3_secretsmanager>=1.26.49",
-  "prefect>2.20.0, <3.0.0",
+  "prefect>=2.20.0, <3.0.0",
   "pyparsing>=3.1.1",
   "tenacity>=8.0.0",
 ]
