--- a/src/integrations/prefect-ray/pyproject.toml
+++ b/src/integrations/prefect-ray/pyproject.toml
@@ -23,7 +23,7 @@ classifiers = [
   "Programming Language :: Python :: 3.12",
   "Topic :: Software Development :: Libraries",
 ]
-dependencies = ["prefect>2.20.0, < 3.0.0", "ray[default]>=2.0.0"]
+dependencies = ["prefect>=2.20.0, < 3.0.0", "ray[default]>=2.0.0"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
