--- a/requirements-client.txt
+++ b/requirements-client.txt
@@ -5,6 +5,7 @@ cloudpickle >= 2.0, < 4.0
 coolname >= 1.0.4, < 3.0.0
 croniter >= 1.0.12, < 3.0.0
 fsspec >= 2022.5.0
+exceptiongroup >= 1.2.1
 graphviz >= 0.20.1
 griffe >= 0.20.0, <0.48.0
 httpcore >=1.0.5, < 2.0.0
