--- a/.ruff.toml
+++ b/.ruff.toml
@@ -10,7 +10,8 @@ lint.ignore = ["E501"]
 
 [lint.per-file-ignores]
 # Do not enforce usage and import order rules in init files
-"__init__.py" = ["E402", "F401", "I"]
+"__init__.py" = ["E402", "F401", "I", "PLC2701"]
+"**/{tests,docs}/*" = ["F841", "PLC2701"]
 "main.py" = ["E402", "F401", "I"]
 
 # Do not fix import in compatibility module
