ensure acn reviews are accepted

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,8 +5,7 @@
 /ui                                  @znicholasbrown
 
 # documentation
-/docs                                @discdiver @daniel-prefect
-
+/docs                                @discdiver @cicdw @desertaxle @zzstoatzz
 # imports
-/src/prefect/__init__.py              @aaazzam @chrisguidry
-/src/prefect/main.py                  @aaazzam @chrisguidry
+/src/prefect/__init__.py              @aaazzam @chrisguidry @cicdw @desertaxle @zzstoatzz
+/src/prefect/main.py                  @aaazzam @chrisguidry @cicdw @desertaxle @zzstoatzz
