--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,10 @@ filterwarnings =
     # tornado uses deprecated `get_event_loop`
     ignore::DeprecationWarning:tornado.platform.asyncio.*
     ignore::DeprecationWarning:tornado.ioloop
+
+    # ignore griffe deprecations for now
+    ignore::DeprecationWarning:griffe.*
+
     ignore:Default value default=
     # Temporary directories are cleaned up implicitly on Windows
     # It is unclear if this comes from an external tool or our own usage
