Ignore websocket deprecation warning

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,9 @@ filterwarnings =
     # tornado uses deprecated `get_event_loop`
     ignore::DeprecationWarning:tornado.platform.asyncio.*
     ignore::DeprecationWarning:tornado.ioloop
+
+    # started with the upgrade to websockets 13+
+    ignore::DeprecationWarning:websockets.legacy.*
     ignore:Default value default=
     # Temporary directories are cleaned up implicitly on Windows
     # It is unclear if this comes from an external tool or our own usage
