--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -18,6 +18,8 @@ numpy
 pillow
 pre-commit
 pluggy >= 1.4.0
+# changes allOf behavior that is baked into many tests
+pydantic < 2.9.0
 pytest > 7, < 9 
 pytest-asyncio >= 0.18.2, != 0.22.0, < 0.23.0 # Cannot override event loop in 0.23.0. See https://github.com/pytest-dev/pytest-asyncio/issues/706 for more details.
 pytest-cov
