Recursively match files in `/docs` for markdown tests

--- a/.github/workflows/markdown-tests.yaml
+++ b/.github/workflows/markdown-tests.yaml
@@ -9,7 +9,7 @@ on:
   pull_request:
     paths:
       - .github/workflows/markdown-tests.yaml
-      - "docs/"
+      - "docs/**"
       - requirements-client.txt
       - requirements-dev.txt
       - requirements-markdown-tests.txt
