--- a/src/integrations/prefect-kubernetes/pyproject.toml
+++ b/src/integrations/prefect-kubernetes/pyproject.toml
@@ -48,6 +48,7 @@ dev = [
     "pytest-asyncio",
     "pytest",
     "pytest-env",
+    "pytest-timeout",
     "pytest-xdist",
 ]
 
@@ -81,3 +82,4 @@ show_missing = true
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
 env = ["PREFECT_TEST_MODE=1"]
+timeout = 30
