--- a/prefect-ui/package.json
+++ b/prefect-ui/package.json
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
+    "@tanstack/router-devtools": "^1.58.15",
+    "@tanstack/router-plugin": "^1.58.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
